# services/advanced/AdvancedServices/Request/AddActionRequest.cs
@@ -9,6 +9,4 @@ public class AddActionRequest
     public string DisplayName { get; set; }
     
     public string TriggerConfig { get; set; }
-    
-    public string JwtToken { get; set; }
 }
