# services/advanced/AdvancedServices/Request/DeleteAreaRequest.cs
@@ -2,7 +2,6 @@
 
 public class DeleteAreaRequest
 {
-    public string JwtToken { get; set; }
     public Guid? ServiceId { get; set; }
     public Guid? ActionId { get; set; }
     public Guid? ReactionId { get; set; }
