# services/swagger/routes.yml
@@ -91,6 +91,10 @@ routes:
     summary: "Reset Password"
     description: "Resets a user's password.\nThe user must be logged in to reset their password."
     method: "POST"
+    headers:
+      X-User-Token:
+        description: "Bearer token for user authentication"
+        required: true
     requestBody:
       required: true
       content:
@@ -98,9 +102,6 @@ routes:
           schema:
             type: "object"
             properties:
-              JwtToken:
-                type: "string"
-                example: "jwt_token"
               Password:
                 type: "string"
                 example: "password"
@@ -183,11 +184,15 @@ routes:
   - name: "get-services"
     host: "csharp_service"
     port: 8080
-    condition: "^/area/([^/]+)/services$"
-    realPath: "/area/{jwtToken}/services"
+    condition: "^/area/services$"
+    realPath: "/area/services"
     summary: "Get Services"
     description: "Retrieves a list of services that you subscribed to."
     method: "GET"
+    headers:
+      X-User-Token:
+        description: "Bearer token for user authentication"
+        required: true
     responses:
       200:
         description: "List of services."
@@ -195,11 +200,15 @@ routes:
   - name: "subscribe-service"
     host: "csharp_service"
     port: 8080
-    condition: "^/area/([^/]+)/subscribe_service$"
-    realPath: "/area/{jwtToken}/subscribe_service"
+    condition: "^/area/subscribe_service$"
+    realPath: "/area/subscribe_service"
     summary: "Subscribe Service"
     description: "Subscribes to a service in an area."
     method: "POST"
+    headers:
+      X-User-Token:
+        description: "Bearer token for user authentication"
+        required: true
     requestBody:
       required: true
       content:
@@ -231,16 +240,10 @@ routes:
     summary: "Get User Information"
     description: "Retrieves information about the user based on the provided JWT token."
     method: "POST"
-    requestBody:
-      required: true
-      content:
-        application/json:
-          schema:
-            type: "object"
-            properties:
-              JwtToken:
-                type: "string"
-                example: "jwt_token_here"
+    headers:
+      X-User-Token:
+        description: "Bearer token for user authentication"
+        required: true
     responses:
       200:
         description: "User information retrieved successfully."
@@ -250,11 +253,15 @@ routes:
   - name: "unsubscribe-service"
     host: "csharp_service"
     port: 8080
-    condition: "^/area/([^/]+)/unsubscribe_service$"
-    realPath: "/area/{jwtToken}/unsubscribe_service"
+    condition: "^/area/unsubscribe_service$"
+    realPath: "/area/unsubscribe_service"
     summary: "Unsubscribe Service"
     description: "Unsubscribes from a service in an area."
     method: "POST"
+    headers:
+      X-User-Token:
+        description: "Bearer token for user authentication"
+        required: true
     requestBody:
       required: true
       content:
@@ -268,9 +275,6 @@ routes:
               credentials:
                 type: "object"
                 properties:
-                  JwtToken:
-                    type: "string"
-                    example: "9321903912kkkiezd89032"
                   Name:
                     type: "string"
                     example: "resd"
@@ -283,6 +287,10 @@ routes:
     summary: "Add actions"
     description: "Adds a new actions for a given service."
     method: "POST"
+    headers:
+      X-User-Token:
+        description: "Bearer token for user authentication"
+        required: true
     requestBody:
       required: true
       content:
@@ -302,9 +310,6 @@ routes:
               TriggerConfig:
                 type: "string"
                 example: "some-trigger-data"
-              JwtToken:
-                type: "string"
-                example: "jwt_token"
     responses:
       200:
         description: "Action added successfully."
@@ -319,6 +324,10 @@ routes:
     summary: "Delete Areas"
     description: "Deletes specified areas using user authentication."
     method: "DELETE"
+    headers:
+      X-User-Token:
+        description: "Bearer token for user authentication"
+        required: true
     requestBody:
       required: true
       content:
@@ -329,9 +338,6 @@ routes:
               user_token:
                 type: "string"
                 example: "user_token_example"
-              JwtToken:
-                type: "string"
-                example: "jwt_token_example"
               ServiceId:
                 type: "number"
                 example: 1
@@ -357,6 +363,10 @@ routes:
     summary: "Add Reaction"
     description: "Adds a new reaction for a given service and action."
     method: "POST"
+    headers:
+      X-User-Token:
+        description: "Bearer token for user authentication"
+        required: true
     requestBody:
       required: true
       content:
@@ -376,9 +386,6 @@ routes:
               ExecutionConfig:
                 type: "string"
                 example: "some-execution-configuration"
-              JwtToken:
-                type: "string"
-                example: "jwt_token_here"
     responses:
       200:
         description: "Reaction added successfully."
@@ -388,11 +395,15 @@ routes:
   - name: "actions-reactions"
     host: "csharp_service"
     port: 8080
-    condition: "^/area/([^/]+)/services/([^/]+)/actions_reactions$"
-    realPath: "/area/{jwtToken}/services/{serviceName}/actions_reactions"
+    condition: "^/area/services/([^/]+)/actions_reactions$"
+    realPath: "/area/services/{serviceName}/actions_reactions"
     summary: "Get Actions and Reactions"
     description: "Retrieves a list of actions and reactions available in a service."
     method: "GET"
+    headers:
+      X-User-Token:
+        description: "Bearer token for user authentication"
+        required: true
     responses:
       200:
         description: "List of actions and reactions."
@@ -400,11 +411,15 @@ routes:
   - name: "action"
     host: "csharp_service"
     port: 8080
-    condition: "^/area/([^/]+)/services/([^/]+)/action$"
-    realPath: "/area/{jwtToken}/services/{serviceName}/action"
+    condition: "^/area/services/([^/]+)/action$"
+    realPath: "/area/services/{serviceName}/action"
     summary: "Get all actions of the service"
     description: "Retrieves a list of actions available in a service."
     method: "GET"
+    headers:
+      X-User-Token:
+        description: "Bearer token for user authentication"
+        required: true
     responses:
       200:
         description: "List of actions."
@@ -414,11 +429,15 @@ routes:
   - name: "reaction"
     host: "csharp_service"
     port: 8080
-    condition: "^/area/([^/]+)/services/([^/]+)/reaction$"
-    realPath: "/area/{jwtToken}/services/{serviceName}/reaction"
+    condition: "^/area/services/([^/]+)/reaction$"
+    realPath: "/area/services/{serviceName}/reaction"
     summary: "Get all reactions of the service"
     description: "Retrieves a list of reactions available in a service."
     method: "GET"
+    headers:
+      X-User-Token:
+        description: "Bearer token for user authentication"
+        required: true
     responses:
       200:
         description: "Reaction successful."
